Task B impl
FrameRenderPort end to end: a pack's final output reaches the vanilla
framebuffer, the composite chain ping-pongs, and translucent-terrain and
hand scopes route to their gbuffer targets.

- P5 estate: attach the frozen write/read side per pass snapshot; flips
  and writes from the planned route; FINAL flips nothing
- P7 driver: fullscreen passes activate + textureBindings in spec order,
  composite band traversed, deferred band at the translucent trigger,
  draw results honoured, viewport scale forwarded, evidence lines
- P4: absent indexed passes select Skipped; writes stay symbolic
- Port: identity matrices, fixed-function posture, viewport, Screen =
  Minecraft's framebuffer, GL introspection evidence
- Glue: blend/alpha/fog snapshots round-trip "disabled"; 2D working
  binds through GlStateManager; empty sampler lists are a no-op
- Mixins: TERRAIN_TRANSLUCENT trigger, HAND_SOLID around the first-person
  item draw
- Tests: PassSnapshotAttachmentTest, FrameDriverScriptedTest fullscreen
  cases, FullscreenViewport; result doc HANDOFF_v0.2_TASK_B_RESULT.md

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HC5mZARBF2wLzJr4AcgrFy